--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-particles": "^2.10.1",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.10.1",
     "sass": "^1.63.4",
     "styled-components": "^6.0.0-rc.3",
+    "tsparticles": "^2.10.1",
     "typescript": "^5.1.3",
     "web-vitals": "^2.1.0"
   },
