--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/css-modules": "^1.0.2",
     "@types/file-loader": "^5.0.1",
+    "@types/react-scroll": "^1.8.7",
+    "@types/react-typing-effect": "^2.0.3",
     "axios": "^1.4.0",
-    "eslint": "8.22.0",
+    "eslint": "^8.43.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
     "react-scripts": "5.0.1",
+    "react-tilt": "^1.0.2",
+    "react-ts-typewriter": "^0.1.8-b",
     "react-tsparticles": "^2.10.1",
     "sass": "^1.63.4",
     "styled-components": "^6.0.0-rc.3",
@@ -55,5 +60,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
